--- a/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalTwoDimensionalViewSettingsControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalTwoDimensionalViewSettingsControl.xaml
@@ -5,16 +5,21 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="200" d:DesignWidth="400">
     <Grid>
-        
-        <GroupBox Header="Visiblity" HorizontalAlignment="Left" Height="221" Margin="16,10,0,0" VerticalAlignment="Top" Width="216">
+
+        <GroupBox Header="Visiblity" HorizontalAlignment="Left" Height="116" Margin="10,10,0,0" VerticalAlignment="Top" Width="111">
             <StackPanel>
                 <CheckBox x:Name="checkBox_Visibilty_Space" Content="Space" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
                 <CheckBox x:Name="checkBox_Visibilty_Panel" Content="Panel" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
                 <CheckBox x:Name="checkBox_Visibilty_Aperture" Content="Aperture" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
             </StackPanel>
         </GroupBox>
-
+        <GroupBox Header="Space color scheme" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="126,10,10,74">
+            <Grid>
+                <ComboBox x:Name="comboBox_ZoneType"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Height="20" Margin="86,10,0,0"/>
+                <Label Content="Zone Type:" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Height="25" Margin="10,6,0,0"/>
+            </Grid>
+        </GroupBox>
     </Grid>
 </UserControl>
