--- a/WPF/SAM.Analytical.UI.WPF/Controls/SpaceZoneControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/SpaceZoneControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="400" d:DesignWidth="450">
+             d:DesignHeight="400" d:DesignWidth="450" Loaded="UserControl_Loaded">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
