--- a/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalTwoDimensionalViewSettingsControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalTwoDimensionalViewSettingsControl.xaml
@@ -6,8 +6,7 @@
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
              d:DesignHeight="250" d:DesignWidth="450">
-    <Grid Margin="0,0,-0.4,0">
-
+    <Grid>
         <GroupBox Header="Visiblity" Height="180" Margin="10,59,0,10.6" VerticalAlignment="Stretch" HorizontalAlignment="Left" Width="109">
             <StackPanel>
                 <CheckBox x:Name="checkBox_Visibilty_Space" Content="Space" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
@@ -19,6 +18,6 @@
             <local:SpaceAppearanceSettingsControl x:Name="spaceAppearanceSettingsControl" HorizontalAlignment="Left" Height="157" VerticalAlignment="Top" Width="301" Margin="0,0,0,-0.2"/>
         </GroupBox>
         <Label x:Name="label_Name" Content="Name:" HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Name" HorizontalAlignment="Left" Height="23" Margin="55,18,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="textBox_Name" HorizontalAlignment="Left" Height="20" Margin="55,22,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
     </Grid>
 </UserControl>
