--- a/WPF/SAM.Core.UI.WPF/Controls/LegendControl.xaml
+++ b/WPF/SAM.Core.UI.WPF/Controls/LegendControl.xaml
@@ -5,15 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Core.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="150">
-    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <Label x:Name="label_Name"  Grid.Row="0" Content="Legend"></Label>
-        <StackPanel Grid.Row="1" x:Name="stackPanel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <ListViewItem>AAA</ListViewItem>
-        </StackPanel>
+             d:DesignHeight="450" d:DesignWidth="800">
+    <Grid>
+            
     </Grid>
 </UserControl>
