--- a/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalThreeDimensionalViewSettingsControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalThreeDimensionalViewSettingsControl.xaml
@@ -17,7 +17,7 @@
         <GroupBox Header="Color Scheme" HorizontalAlignment="Stretch" Height="180" Margin="124,59,5,10.6" VerticalAlignment="Stretch">
             <local:SpaceAppearanceSettingsControl x:Name="spaceAppearanceSettingsControl" HorizontalAlignment="Left" Height="157" VerticalAlignment="Top" Width="301" Margin="0,0,0,-0.2"/>
         </GroupBox>
-        <Label x:Name="label_Name" Content="Name:" HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Name" HorizontalAlignment="Left" Height="20" Margin="55,22,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="label_Name" Content="View Name:" HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBox_Name" HorizontalAlignment="Left" Height="20" Margin="89,22,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
     </Grid>
 </UserControl>
