--- a/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalModelControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalModelControl.xaml
@@ -5,14 +5,27 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Loaded="UserControl_Loaded">
+             d:DesignHeight="450" d:DesignWidth="300" Loaded="UserControl_Loaded">
     <Grid>
-        <TreeView Margin="0,0,0,0" Name="TreeView_Main" ContextMenuOpening="TreeView_Main_ContextMenuOpening">
-            <TreeView.ContextMenu>
-                <ContextMenu Name ="ContextMenu"></ContextMenu>
-            </TreeView.ContextMenu>
-
-
-        </TreeView>
+        <TabControl VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,0" TabStripPlacement="Bottom">
+            <TabItem Header="Model">
+                <Grid Background="#FFE5E5E5">
+                    <TreeView Margin="0,0,0,0" Name="treeView_Model" ContextMenuOpening="treeView_Model_ContextMenuOpening">
+                        <TreeView.ContextMenu>
+                            <ContextMenu Name ="contextMenu_Model"></ContextMenu>
+                        </TreeView.ContextMenu>
+                    </TreeView>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Views">
+                <Grid Background="#FFE5E5E5">
+                    <TreeView Margin="0,0,0,0" Name="treeView_Views">
+                        <TreeView.ContextMenu>
+                            <ContextMenu Name ="contextMenu_Views"></ContextMenu>
+                        </TreeView.ContextMenu>
+                    </TreeView>
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </UserControl>
