--- a/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalTwoDimensionalViewSettingsControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalTwoDimensionalViewSettingsControl.xaml
@@ -7,21 +7,23 @@
              mc:Ignorable="d" 
              d:DesignHeight="400" d:DesignWidth="450">
     <Grid>
-        <GroupBox Header="Visiblity" Height="180" Margin="10,197,0,23" VerticalAlignment="Stretch" HorizontalAlignment="Left" Width="109">
+        <GroupBox Header="Visiblity" Height="180" Margin="10,207,0,13" VerticalAlignment="Stretch" HorizontalAlignment="Left" Width="109">
             <StackPanel>
                 <CheckBox x:Name="checkBox_Visibilty_Space" Content="Space" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="checkBox_Visibilty_Space_Click"/>
                 <CheckBox x:Name="checkBox_Visibilty_Panel" Content="Panel" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
                 <CheckBox x:Name="checkBox_Visibilty_Aperture" Content="Aperture" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
             </StackPanel>
         </GroupBox>
-        <GroupBox x:Name="groupBox_ColorScheme"  Header="Color Scheme" HorizontalAlignment="Stretch" Height="180" Margin="124,197,4.6,23" VerticalAlignment="Stretch">
+        <GroupBox x:Name="groupBox_ColorScheme"  Header="Color Scheme" HorizontalAlignment="Stretch" Height="180" Margin="124,207,4.6,13" VerticalAlignment="Stretch">
             <local:SpaceAppearanceSettingsControl x:Name="spaceAppearanceSettingsControl" HorizontalAlignment="Left" Height="157" VerticalAlignment="Top" Width="301" Margin="0,0,0,-0.2"/>
         </GroupBox>
         <Label x:Name="label_Name" Content="View Name:" HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="textBox_Name" HorizontalAlignment="Left" Height="20" Margin="89,22,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="209"/>
-        <GroupBox Header="Elevation" HorizontalAlignment="Left" Height="125" Margin="10,60,0,0" VerticalAlignment="Top" Width="317">
-            <local:ElevationControl x:Name="elevationControl" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch"/>
+        <GroupBox Header="Elevation" HorizontalAlignment="Left" Height="122" Margin="10,79,0,0" VerticalAlignment="Top" Width="317">
+            <local:ElevationControl x:Name="elevationControl" HorizontalAlignment="Stretch" Margin="0,1,-0.2,-0.8" VerticalAlignment="Stretch"/>
         </GroupBox>
         <CheckBox x:Name="checkBox_UseDefaultName" Content="Default Name" HorizontalAlignment="Left" Margin="331,24,0,0" VerticalAlignment="Top" Checked="checkBox_UseDefaultName_Checked" Unchecked="checkBox_UseDefaultName_Checked"/>
+        <Label x:Name="label_Group" Content="Group:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="comboBox_Group" HorizontalAlignment="Left" Margin="89,49,0,0" VerticalAlignment="Top" Width="209" Height="21" IsEditable="True"/>
     </Grid>
 </UserControl>
