--- a/WPF/SAM.Core.UI.WPF/Windows/TextMapWindow.xaml
+++ b/WPF/SAM.Core.UI.WPF/Windows/TextMapWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAM.Core.UI.WPF"
         mc:Ignorable="d"
-        Title="TextMapWindow" Height="510" Width="460">
+        Title="Text Map" Height="510" Width="460">
     <Grid>
         <local:TextMapControl x:Name="textMapControl" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0, 0,40"/>
         <Button x:Name="button_Close" Content="Close" IsCancel="True" HorizontalAlignment="Right" Margin="0,0,9.6,10.4" VerticalAlignment="Bottom" Width="75" Click="button_Close_Click"/>
